src/negative_test_cases/Testcases/incorrect_operand_type_equality.stl
void main(){
string str;
string str1;
if(str == str1){}
char c;
if(str==c){}

}
